easyfix-macros/tests/scenarios/fail_on_multibyte_character.stderr
error: wrong byte found at position 3
 --> tests/scenarios/fail_on_multibyte_character.rs:4:14
  |
4 |     fix_str!("123ł");
  |              ^^^^^^
